# RBOX-Launchpad

./: .gitignore  GUI.ui  LICENSE  README.md  RboxDriver.py  config.json  debug.py  main.py  midi_driver.py
CAD/: AI3M_bottom.gcode  AI3M_top v11.gcode  button.stl  top.stl
CAD/EXPORT/: bottom.stl  button.stl  top v11.stl
device/: main.py  rbox.py  strandtest.py  ws2812b.py
device/old_py/: RGB.json  ws2812b.py
device/rbox/: CMakeLists.txt
device/rbox/include/: etc.h  ws2812.h
device/rbox/src/: main.c  rbox.c  ws2812.c
driver/: GUI.ui  config.json  debug.py  main.py  midi_driver.py  rboxdriver.py  test.py  tiltconfig.json
misc/: testconfig.json
